--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ seaborn>=0.11.0
 requests>=2.28.0
 urllib3>=1.26.0
 
+# Built-in modules for API calls
+# urllib.request, urllib.error, json, re are built-in
+
 # File và data processing
 # pathlib, json, datetime are built-in modules
 
